--- a/package.json
+++ b/package.json
@@ -6,12 +6,21 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
-    "test": "jest",
+    "test": "jest --verbose",
     "lint": "eslint ."
   },
   "dependencies": {
+    "@types/react-redux": "^7.1.9",
+    "@types/remote-redux-devtools": "^0.5.4",
     "react": "16.13.1",
-    "react-native": "0.63.3"
+    "react-native": "0.63.3",
+    "react-native-localization": "^2.1.6",
+    "react-native-navigation": "^7.1.0",
+    "react-redux": "^7.2.1",
+    "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
+    "redux-saga-test-plan": "4.0.0-rc.3",
+    "remote-redux-devtools": "^0.5.16"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
