--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,23 @@
 {
   "compilerOptions": {
-    "allowJs": true,
-    "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
-    "isolatedModules": true,
-    "jsx": "react",
-    "lib": ["es6"],
-    "moduleResolution": "node",
-    "noEmit": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "target": "ES2015",
+    "module": "es2015",
+    "noEmit": false,
+    "outDir": "./build",
     "strict": true,
-    "target": "esnext",
-    "resolveJsonModule": true
+    "moduleResolution": "node",
+    "baseUrl": "./node_modules",
+    "jsx": "react-native",
+    "types": ["node"],
+    "allowSyntheticDefaultImports": true,
+    "lib" : ["es6"],
+    "rootDir": "./",
+    "noUnusedParameters": true
   },
   "exclude": [
-    "node_modules",
-    "babel.config.js",
-    "metro.config.js",
-    "jest.config.js"
-  ]
+    "node_modules"
+  ],
+  "include": []
 }
