chore: changer linter script

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest --verbose",
-    "lint": "eslint ."
+    "lint": "eslint ./src/**"
   },
   "dependencies": {
     "@types/react-redux": "^7.1.9",
